# CozyVoice

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.full-stack.yml  docker-compose.yml  pyproject.toml
config/: voice.yaml
deploy/base_runtime/: Caddyfile  build.sh  docker-compose.1panel.yml
deploy/livekit/: livekit.yaml
docs/plans/: 2026-04-25-production-readiness-plan.md
docs/reports/: 2026-05-03-code-review-assessment.md
docs/specs/: 2026-04-25-production-readiness-design.md
examples/: README.md  realtime_direct_demo.html  realtime_voice_demo.html
src/cozyvoice/: livekit_entrypoint.py  main.py  metrics.py  pipeline_agent.py  realtime_agent.py
src/cozyvoice/api/: rest.py  ws.py
src/cozyvoice/bridge/: brain_client.py
src/cozyvoice/config/: settings.py
src/cozyvoice/middleware/: rate_limit.py
src/cozyvoice/providers/: base.py  brain_llm.py
tests/integration/: test_fallback_chain_roundtrip.py  test_rest_voice_chat.py  test_ws_voice_stream.py
tests/unit/: test_brain_client.py  test_brain_client_stream.py  test_brain_llm_adapter.py  test_config_loader.py  test_edge_tts.py  test_fallback_tts.py  test_health_endpoint.py  test_health_ready.py  test_livekit_entrypoint.py  test_main_build_functions.py  test_metrics.py  test_openai_realtime_mock.py  test_openai_tts.py  test_openai_whisper_stt.py  test_pipeline_agent.py  test_providers_mock.py  test_rate_limiter.py  test_realtime_agent.py  test_settings_edge_cases.py  test_tencent_tts.py  test_transcribe_endpoint.py  test_voice_chat_sse.py  test_ws_error_paths.py
(+9 files in other folders)
